t/MH-11286 Added overflow hidden to prevent zoom video overflow controls

--- a/modules/matterhorn-engage-theodul-plugin-video-videojs/src/main/resources/static/styles/desktop.css
+++ b/modules/matterhorn-engage-theodul-plugin-video-videojs/src/main/resources/static/styles/desktop.css
@@ -12,6 +12,7 @@
 
 .videoDisplay {
     margin: 1px;
+    overflow: hidden;
 }
 
 .videoDefaultLayout {
